--- a/src/components/sections/landing/HeroSectionAlt.astro
+++ b/src/components/sections/landing/HeroSectionAlt.astro
@@ -119,7 +119,7 @@ interface Props {
   <!-- Hero Section Heading -->
   <div class="mx-auto mt-5 max-w-xl text-center">
     <h2
-      class="block text-balance text-4xl font-bold leading-tight tracking-tight text-neutral-800 dark:text-neutral-200 md:text-5xl lg:text-6xl"
+      class="hero-title block text-balance text-4xl font-bold leading-tight tracking-tight text-neutral-800 dark:text-neutral-200 md:text-5xl lg:text-6xl"
     >
       {title}
     </h2>
@@ -128,7 +128,7 @@ interface Props {
   <div class="mx-auto mt-5 max-w-3xl text-center">
     {
       subTitle && (
-        <p class="text-pretty text-lg text-neutral-600 dark:text-neutral-400">
+        <p class="hero-subtitle text-pretty text-lg text-neutral-600 dark:text-neutral-400">
           {subTitle}
         </p>
       )
@@ -137,7 +137,7 @@ interface Props {
   <!-- Github Button -->
   {
     url && (
-      <div class="mt-8 flex justify-center gap-3">
+      <div class="hero-cta mt-8 flex justify-center gap-3">
         <GithubBtn url={url} title={btnTitle}/>
       </div>
     )
